[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LammpsRegion2VmdReader"
version = "2025.0"
description = "[[Short description]]"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
]

[project.urls]
repository = "https://github.com/ovito-org/LammpsRegion2VmdReader"

[project.entry-points.'OVITO.FileReader']
"Lammps Region2VMD Reader" = "LammpsRegion2VmdReader:LammpsRegion2VmdReader"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]